# cxx-cmake-executable

./: CMakeLists.txt  README.md  README.template.md
cmake/settings/: cpp.cmake
